<resources>
    <string name="app_name">MyPersonalCvV2</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_language">Change language...</string>

    <string name="switchTextColor" translatable="false">#ffffff</string>

    <!-- Resources -->
    <string name="font_name_qucksand_reg">Quicksand-Regular.otf</string>
    <string name="font_name_qucksand_bold">Quicksand-Bold.otf</string>

    <!-- Personal info -->
    <string name="my_name_surname" translatable="false">Tomas Škarnulis</string>
    <string name="my_email" translatable="false">tomas.skarnulis@gmail.com</string>
    <string name="my_phone_number" translatable="false">+37062104448</string>
    <string name="email_subject" translatable="false">Laiškas iš CV aplikacijos</string>
    <string name="facebook_link" translatable="false">https://www.facebook.com/tomas.tosas.1</string>

    <!-- Titles knowledge -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_knowledge">Knowledge</string>
    <string name="title_android_studio" translatable="false">Android Studio</string>
    <string name="title_react_native" translatable="false">React Native</string>
    <string name="title_visual_studio" translatable="false">Visual Studio</string>
    <string name="title_unity" translatable="false">Unity</string>
    <string name="title_github" translatable="false">Github</string>


    <!-- Verciamas tekstas -->
    <string name="start_main_question">Why I writing for you?</string>
    <string name="start_first_explain">Because I want</string>
    <string name="start_work">Work for You</string>
    <string name="start_practice">Practice</string>
    <string name="start_second_question">Where You can find all information?</string>
    <string name="start_second_explain">Evrything else you can find in Meniu section</string>
    <string name="start_button_open">Open Menu</string>

    <string name="info_email">My Email:</string>
    <string name="info_phone">My Phone Number:</string>
    <string name="info_facebook">My Fecebook:</string>

    <string name="nav_contact_text">Contact me</string>
    <string name="nav_about_me">About Me</string>
    <string name="nav_experience">Experience</string>
    <string name="nav_knowledge">Knowledge</string>
    <string name="nav_email">My Email</string>
    <string name="nav_phone_number">Phone Number</string>
    <string name="nav_header_second_text">Android Applications Developer</string>

    <string name="frag_start">Hello!</string>
    <string name="frag_about_me">About Me</string>
    <string name="frag_experience">Experience</string>

    <string name="frag_about_me_explain">In this section you can find some information about me</string>
    <string name="frag_experience_explain">In this section you can find some information my experience</string>

    <string name="frags_next">Next</string>
    <string name="frags_previos">Previous</string>

    <string name="title_end_frag">So, do you decided?</string>
    <string name="title_end_toolbar">So...</string>
    <string name="explain_end_frag">I thing you still have questions for me, so you can contact me one of methods below: </string>
    <string name="email_button_end_frag">Write now</string>
    <string name="phone_button_end_frag">Call me now</string>
    <string name="facebook_button_end_frag">Add me </string>

    <string name="android_frag_subtitle">Experiance: about 7 months. Made apps: more than 10 (fully completed)</string>
    <string name="android_frag_explain">I use Android Studio about 7 months now. Maded some apps witch I can show in interview. Android Studiois is strongest my side. And I like it very much.
        I know what is layouts, adapters, holders, values files and many more. By theway this app was maded with it.
 	 \n \t* Know how to use
    grandle
 	 \n \t* Know why I need manifest
 	 \n \t* Know about difirent screens compability
 	 \n \t* Now have interested learn use MVVM pattern
 	 \n \t* Thinking switch to Kotlin one day (Now still using Java)</string>
    <string name="react_frag_subtitle">Experiance: about 1 2 months. Madede apps: 3 (not published) </string>
    <string name="react_frag_explain"> I am very new at this JavaScript framework, but excided to learn it and know basic structure \n \t * Very slow, but usaly can get things done
    \n \t * Know how to use NPM and add librarys \n \t * Like to learn it</string>
    <string name="visual_frag_subtitle">Experiance: about 1 years. Madede jobs: 8 (not published and some just to small) </string>
    <string name="visual_frag_explain"> Have some knowilage becouse it C# was first my Object Oriented programing langue.
        I enjoy using Visual Studio and this langue, becouse it is preaty simple to me  \n \t * Have real work experiance with it
     \n \t * Know about:  \n \t \t .NET \n \t \t ASP.NET \n \t \t MVC patter \n If you need more you shuold just ask</string>
    <string name="unity_frag_subtitle">Experience: about 1 year. Madaded games: 4( one fully accsesible in play store</string>
    <string name="unity_frag_explain">I using Unity not alot, but having fun when I do games with it. I know how animations works, wath is coliders,
        can write scripts and make things happen \n \t * Done one app with full Google Games Service \n \t * Played with Vuforia plugin and made fun shooter game
        \n \t * Like alot developers love create new games</string>
    <string name="github_frag_subtitle">Experieance: about 3 mounths</string>
    <string name="github_frag_explain">Not using alot, becouse usaly I work alone, but realy want to know and learn about it doing things
    \n \t * Know how to push or clone projects \n \t * Stuff about merge conflicts not so big problem to me \n \t * I think you can
    help me with biger projects ....</string>

    <string name="about_me_item_one_title">What I am DOING right now?</string>
    <string name="about_me_item_one_text">I am currently studying VIKO EIF Smart Equipment Technologies. In my free time (and not only) learning to develop Android applications.</string>
    <string name="about_me_item_two_title">My STRENGHTS</string>
    <string name="about_me_item_two_text">I always have goals that make me move along. It\'s not terrible to me try out new and unknown things. Not only I think about things, but I try to get them done. Strongest developing side - create Android applications using Android Studio IDE.</string>
    <string name="about_me_item_three_title">My WEAKNES</string>
    <string name="about_me_item_three_text">I am a little slow. I think this is just a matter of time and experience. I have theoretical knowledge about MVVM, MVC and similar templates, but still difficult to implement them. The weakest part of the creation is React Native.</string>
    <string name="about_me_item_four_title">My GOALS</string>
    <string name="about_me_item_four_text">Programing and developing aplications is my hobby, so work where I can do those thing is be a great and meaningful, time-consuming, resourceful and up-to-date resource. I hope to be beneficial and to benefit from what is beneficial to everyone. Therefore, my main goal at the moment is meaningful work, perhaps at your company.</string>
    <string name="about_me_item_five_title">What I can OFFER</string>
    <string name="about_me_item_five_text">I think I have enough potential to be useful. If you invest in me, I can promise to be the best for you, stay and grow with you.</string>
    <string name="about_me_item_six_title">What I EXPECT from you</string>
    <string name="about_me_item_six_text">I hope you understand that I\'m not yet a senior programmer, you always can help when you really need it, and let it go ahead with you.</string>

    <string name="experience_title_one" translatable="false">Teltonika IoT academy</string>
    <string name="experience_explain_one">I practice at the IoT Teltonika Academy. Runtime - 270 hours. I have proof of this (certificate).</string>

    <string name="experience_title_two">Studies</string>
    <string name="experience_explain_two">While studying I had two internships. Language learning was C #. I also have other theoretical materials about programming (design) templates, program memory, object oriented programing and so on.</string>

    <string name="experience_title_three" translatable="false">Google Play</string>
    <string name="experience_explain_three">I Have some experience with Google Play Console, App publiching, Updates.</string>

    <string name="experience_title_four" translatable="false">Google Play Games Sevices</string>
    <string name="experience_explain_four">Have some experience with Google Play Games services, one game fully available in Google Play Store.</string>


</resources>
